--- a/public_html/index.html
+++ b/public_html/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
 <title>CCSF Coders</title>
+<link rel="stylesheet" href="css/style.css">
+
+<div class="header">
+<h1>CCSF Coders</h1>
+</div>
 
 </html>
 
