starting possible mockup

--- a/public_html/history.html
+++ b/public_html/history.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-<title>CCSF Coders - Index</title>
+<title>CCSF Coders - History</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/clock.js"></script>
 
@@ -10,9 +10,7 @@
 ?>
 
 <div class="content">
-    <p>
-        Full time source code pro? Who knows!
-    </p>
+    Arial and Verdana
 </div>
 
 </html>
